GNOME Bugzilla – Bug 700987
Be more careful with memory allocation
Last modified: 2013-05-27 02:37:18 UTC
Better to 0-initialize these structs, since GetValidIGD may not end up filling them. See https://bugzilla.redhat.com/attachment.cgi?id=707491 for a related stacktrace.
Created attachment 245285 [details] [review] Be more careful with memory allocation
Review of attachment 245285 [details] [review]: Looks fine, please push.
Attachment 245285 [details] pushed as 81b5e37 - Be more careful with memory allocation