Be more careful with memory allocation

Better to 0-initialize these structs, since GetValidIGD may
not end up filling them.
See https://bugzilla.redhat.com/attachment.cgi?id=707491
for a related stacktrace.

https://bugzilla.gnome.org/show_bug.cgi?id=700987